# agentfull

./: LICENSE  README.md  implementation-plan.md  pyproject.toml
agentfull.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli/: __init__.py  validator.py
core/: 01-thinking-framework.md  02-communication-style.md  03-collaboration-principles.md  04-decision-making.md  05-error-handling.md  06-context-management.md  07-effort-and-calibration.md  08-intent-and-metacognition.md  09-tool-mastery-and-context.md  10-security-boundaries.md  11-multi-agent-coordination.md  12-environment-sandbox.md  13-behavioral-guardrails.md  14-parallel-rlef.md  15-metaprompting-loop.md  16-model-routing.md  17-agent-benchmarks-landscape.md  18-agentic-loop-architectures.md  19-model-context-protocol.md  20-episodic-memory-retrieval.md  21-token-budgeting-financials.md  22-dynamic-hitl-negotiation.md  23-self-hosted-sandboxing.md  24-agent-performance-telemetry.md  25-self-healing-compilers.md  26-reactive-event-loops.md  27-llm-judge-evaluators.md  28-dynamic-kv-cache-compaction.md  29-graph-associative-memory.md  30-context-drift-protection.md  31-agentic-coding-standards.md  32-continuous-integration-behavior.md  33-multimodal-visual-debugging.md  34-agent-consensus-debate.md  35-interactive-learning-loops.md  36-semantic-plan-caching.md  37-privacy-preserving-ops.md  38-inter-agent-protocols.md  39-observability-replay.md  40-rag-context-injection.md
examples/: ci-debugging-session.md  collaborative-planning.md  infrastructure-migration.md
patterns/: iterative-problem-solving.md  (+4 more)
(+78 files in other folders)
